spade-tests/src/snapshots/spade_tests__integration__trait_tests__pipelines_in_impl_blocks_are_graceuflly_disallowed.snap
---
source: spade-tests/src/integration.rs
---
struct X {}

impl X {
    pipeline(0) a(self) -> bool {true}
}


error: Pipelines are currently not allowed in impl blocks
  ┌─ testinput:4:5
  │
4 │     pipeline(0) a(self) -> bool {true}
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Not allowed here
  │
  = note: This limitation is likely to be lifted in the future
  = help: Consider defining a free-standing pipeline for now


